# snap-memories-downloader

./: Cargo.toml  build.rs  readme.md
src/: config.rs  lib.rs  main.rs
